[tool.poetry]
name = "learn_mcp"
version = "0.1.0"
description = "A project using MCP CLI"
authors = ["Paramjit"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mcp = { version = "1.6.0", extras = ["cli"] }
openai = "1.75.0"
python-dotenv = "^1.0.0"
ipykernel = "^6.29.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"